--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	function onDeviceReady() {
 		navigator.splashscreen.hide();
-		window.location.href = "http://roompangcj.com/mobile";	
+		window.location.href = "http://roompangcj.com/mobile/home?mobile=1";	
 	}
 </script>
 <body  onload="onLoad()">
